added FoodToken Spawn Rules